--- a/css/partials/3footer/_footer.scss
+++ b/css/partials/3footer/_footer.scss
@@ -5,6 +5,7 @@ footer {
 	height: 70px;
 	background-color: #efefef;
 	text-align: center;
+	margin-top: 10px;
 	p {
 		padding-top: 30px;
 		font-size: 15px;
